# rex-player

./: LICENSE  LICENSE.txt  README.md
assets/: circle.png~  tv.png~
assets/fonts/default/: 21.fnt  31.fnt  41.fnt  81.fnt
assets/old-icons/: jumbo.fnt  jumbo.met
projectm-rs/: Cargo.toml
projectm-rs/projectm-sys/: build.rs
projectm-rs/projectm-sys/libprojectM/: CMakeLists.txt
projectm-rs/tests/: core.rs
rex-player/: Cargo.toml
rex-player/src/: app.rs  ffmpeg.rs  macros.rs  main.rs  rhai.rs  sprite.rs
rex-player/src/_/: todo.txt
rex-player/src/app/: n_app.rs
rex-player/src/elements/: chooser.rhai
rex-player/src/media/: l_ffmpeg.rs
rex-player/src/player/: audio.rs  audio_w_vis.rs  player.rs  video.rs
rex-player/src/script/: l_rhai.rs
rex-player/src/scripts/: common.rhai
rex-player/src/styles/: common.rhss
rex-player/src/utils/: macros.rs
rex-player/src/views/: app-playlist.view.rhai  dev-overlay.view.rhai  media-full.view.rhai  media-quad.view.rhai  music.view.rhai  osd.view.rhai  sfw-osd.view.rhai  test.view.rhai
rex-player/src/views/old/: common.rhai
rex-player/src/visuals/: anim.rs  layer.rs  scene.rs  scene_node.rs  sprite.rs  style.rs  visual.rs
rex-player/src/windowing/: n_req.rs  n_scene.rs  n_sprite.rs  n_xcb.rs  xcb.rs
