[package]
name = "rex-player"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.3"
ffmpeg-next = "7.1.0"
image = "0.25.5"
json = "0.12.4"
rand = "0.8.5"
rhai = { version="1.20.1", features=["sync"] }
rhai-fs = { version="0.1.3", features=["sync"] }
rhai-rand = "0.1.6"
xcb = { version="1.5.0", features=["present","randr"] }
lazy_static = "1.5.0"
bytemuck = "1.21.0"
smol = "2.0.2"
futures = "0.3.31"
ringbuf = "0.3.3"
anyhow = "1.0.95"
