[package]
name = "rex-player"
version = "0.1.0"
edition = "2021"


[dependencies]
cpal = "0.15.3"
image = "0.25.5"
json = "0.12.4"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.135"
rand = "0.9.0"
rhai = { version="1.21.0", features = ["sync", "serde"] }
rhai-fs = { version="0.1.3", features=["sync"] }
rhai-rand = "0.1.6"
projectm = { path = "../projectm-rs", features = ["playlist","static"] }
gl = "0.14.0"
x11 = {  version="2.21.0",features=["glx","xlib"] }
xcb = { version="1.5.0", features = ["dri2", "glx", "xlib_xcb","present","randr"] }
#xcb = { version="1.5.0", features=["present","randr"] }
lazy_static = "1.5.0"
bytemuck = "1.21.0"
smol = "2.0.2"
futures = "0.3.31"
ringbuf = {  version="0.3.3",features=["alloc"] }
anyhow = "1.0.95"
derive_more = { version="2.0.1",features=["deref_mut","deref"] }
md5 = "0.7.0"
xcb-util-cursor = "0.3.3"
ffmpeg-next = { version="7.1.0",features=["static","build-license-nonfree"] }
duct = "0.13.7"

